# crawler-lite

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.master-prebuilt  Dockerfile.worker  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
cmd/master/: main.go
cmd/worker/: main.go
crawlerkit-py/: README.md  pyproject.toml
crawlerkit-py/src/crawlerkit/: __init__.py  _events.py  browser.py  runner.py  spider.py
crawlerkit-py/src/crawlerkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crawlerkit-py/tests/: test_browser.py  test_spider.py
db/migrations/: 00001_users_auth.sql  00002_projects_spiders.sql  00003_tasks.sql  00004_artifacts.sql  00005_items.sql  00006_spider_git.sql  00007_schedules.sql  00008_task_retry.sql  00009_notification_channels.sql
db/queries/: spiders.sql  tasks.sql  users.sql
deploy/: Caddyfile  LOCAL_DOCKER.md  RUNBOOK.md  backup.sh  restore.sh
docs/: DESIGN-v2.md  DESIGN.md  bot-task-platform-v1-design.md  bot-task-platform-v1.5-design.md  bot-task-platform-v2-design.md  bot-task-platform-v2-protocol.md  bot-task-platform-v2-reliability-interfaces.md
docs/parts/: 01-task-state-machine.md  02-dispatch-worker-selection.md
internal/api/: middleware.go  router.go
internal/app/: app.go  config.go
internal/artifacts/: types.go
internal/auth/: hasher.go  jwt.go  service.go
internal/cache/: redis.go
internal/gitsource/: syncer.go  (+1 more)
loadtest/: README.md  api.js  queue_burst.sh
plans/: private-python-dependencies-plan.md  task-control-feature-plan.md  v2-stateless-control-plane-plan.md
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+72 files in other folders)
