[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerkit"
version = "0.2.0"
description = "Crawler-lite spider SDK — Spider base class, FD3 event protocol, mock browser."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "yourteam" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27,<0.30",
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.20",
    "selenium-wire>=5.1",
    "undetected-chromedriver>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
